landing page successfully done

--- a/index.html
+++ b/index.html
@@ -1,46 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-   
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/style.css">
-        <title></title>
-    </head>
+
+<head>
+
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title></title>
+</head>
+
 <body>
-     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-         
-      </div>
+    <nav class="navbar navbar-expand-lg navbar-light ">
+        <div class="container-fluid">
+         <b>   <a class="navbar-brand" href="#">MKOD ANIMAL SERVICES</a></b>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                   <b>     <a class="nav-link active" aria-current="page" href="#">HOME</a></b>
+                    </li>
+                    <li class="nav-item">
+                   <b>     <a class="nav-link" href="#">ABOUT US</a></b>
+                    </li>
+
+            </div>
+        </div>
+    </nav>
+  
+    <div class="wallpaper">
+        <h1 class="heading"> WELCOME TO MKOD ANIMAL SERVICES </h1>
+        <b>
+            <div class="services"> Which of our services do you need</div>
+        </b>
+        <div class="row">
+            <div class="col-md-3">
+                <button class="btn btn-secondary adopt">ADOPT AN ANIMAL</button>
+            </div>
+            <div class="col-md-3">
+                <button class="btn btn-secondary vet">NEED A VET?</button>
+            </div>
+
+            <div class="col-md-3">
+                <button class="btn btn-secondary">ABOUT US </button>
+            </div>
+            <div class="col-md-3">
+                <b> <button class="btn btn-secondary">HELLO!!!!!</button></b>
+            </div>
+        </div>
     </div>
-  </nav>
-   <div class="wallpaper">
-  <h1 class="heading">  WELCOME TO MKOD ANIMAL SERVICES  </h1>
-  <div class="services"> Which of our services do you need</div>
-  <div class="row">
-      <div class="col-md-6">
-      <button class="btn btn-secondary adopt">ADOPT AN ANIMAL</button>
-      </div>
-      <div class="col-md-6"></div>
-  </div>
-    <b> <button class="btn btn-success welcome">HELLO</button></b>
-   </div>
-    
+</div>
 
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/bootstrap.bundle.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
