added animal pictures

--- a/animals.html
+++ b/animals.html
@@ -1,53 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/style.css">
-        <title>adoption</title>
-        <script src="js/jquery-3.6.0.js"></script>
-        <script src="js/bootstrap.bundle.js"></script>
-        <script src="js/bootstrap.js"></script>
-        <script src="js/scripts.js"></script>
-    </head>
+
+<head>
+
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>adoption</title>
+    <script src="js/jquery-3.6.0.js"></script>
+    <script src="js/bootstrap.bundle.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/scripts.js"></script>
+</head>
+
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary ">
+        <div class="container-fluid">
+            <b> <a class="navbar-brand" href="#">MKOD ANIMAL SERVICES</a></b>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <b> <a class="nav-link " aria-current="page" href="index.html"><button
+                                    class="btn btn-dark adopt">HOME</button></a></b>
+                    </li>
+
+                    <li class="nav-item">
+                        <b> <a class="nav-link active" aria-current="page" href="animals.html"><button
+                                    class="btn btn-dark adopt">ADOPT AN ANIMAL</button></a></b>
+                    </li>
+                    <li class="nav-item">
+                        <b> <a class="nav-link " aria-current="page" href="#"><button class="btn btn-dark vet">NEED A
+                                    VET?</button></a></b>
+                    </li>
+                    <li class="nav-item">
+                        <b> <a class="nav-link" href="#"><button class="btn btn-dark">ABOUT US </button></a></b>
+                    </li>
+
+            </div>
+        </div>
+    </nav>
     <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <div class="card">
+                <img src="./img/download.jpg" class="card-img-top" alt="german shepherd">
+                <div class="card-body">
+                    <h5 class="card-title">Adopt A German Shepherd</h5>
+                    <p class="card-text">German Shepard got originated from Germany. This is a new breed of dog that
+                        originated in the year 1899. These are called as working dogs that are developed for herding
+                        sheep. A German dog has a lot of strength, obedient, intelligent, and very well trained. It is
+                        called the second-most popular breed of dog in the United States and fourth-most popular in the
+                        United Kingdom.
+
+                        The breed height starts at 60-65 cm for males, and for females, height was 55-60 cm. They mostly
+                        observe in tan/black and red/black. They have a double coat. The outer layer sheds all around,
+                        and the thick undercoat is very dense. The life span of the German Shepard is 10.5 years.</p>
+                    <p>WOULD YOU LOVE TO OWN ONE?
+                        <button class="btn btn-dark dog">ADOPT</button>
+                    </p>
+                </div>
             </div>
-          </div>
         </div>
         <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <div class="card">
+                <img src="./img/british_shorthair.jpg" class="card-img-top" alt="british_shorthair">
+                <div class="card-body">
+                    <h5 class="British Shorthair">Card title</h5>
+                    <p class="card-text">The British Shorthair is the pedigreed version of the traditional British
+                        domestic cat, with a distinctively stocky body, dense coat, and broad face. The most familiar
+                        colour variant is the "British Blue", with a solid grey-blue coat, orange eyes, and a
+                        medium-sized tail. The breed has also been developed in a wide range of other colours and
+                        patterns, including tabby and colourpoint.</p>
+                    <button class="btn btn-dark cat">ADOPT</button>
+
+                </div>
             </div>
-          </div>
         </div>
         <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            <div class="card">
+                <img src="./img/rabbit-breeds-dutch-1553722768.jpg" class="card-img-top" alt="rabbit">
+                <div class="card-body">
+                    <h5 class="card-title">Dutch Rabbit</h5>
+                    <p class="card-text">Developed in England in the 1830s, the Dutch is one of the most popular breeds.
+                        Socializing is key for this energetic rabbit, who can become depressed if it spends too much
+                        time in its cage. Thanks to its easygoing attitude, children are more than welcomed to care for
+                        it.</p>
+                </div>
             </div>
-          </div>
         </div>
         <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
+    </div>
 </body>
+
 </html>
