--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light ">
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary ">
         <div class="container-fluid">
          <b>   <a class="navbar-brand" href="#">MKOD ANIMAL SERVICES</a></b>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -24,17 +24,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                   <b>     <a class="nav-link active" aria-current="page" href="#"><button class="btn btn-secondary adopt">HOME</button></a></b>
+                   <b>     <a class="nav-link active" aria-current="page" href="index.html"><button class="btn btn-dark adopt">HOME</button></a></b>
                     </li>
                    
                     <li class="nav-item">
-                        <b>     <a class="nav-link active" aria-current="page" href="#"><button class="btn btn-secondary adopt">ADOPT AN ANIMAL</button></a></b>
+                        <b>     <a class="nav-link " aria-current="page" href="animals.html"><button class="btn btn-dark adopt">ADOPT AN ANIMAL</button></a></b>
                          </li>
                          <li class="nav-item">
-                            <b>     <a class="nav-link active" aria-current="page" href="#"><button class="btn btn-secondary vet">NEED A VET?</button></a></b>
+                            <b>     <a class="nav-link " aria-current="page" href="#"><button class="btn btn-dark vet">NEED A VET?</button></a></b>
                              </li>
                              <li class="nav-item">
-                                <b>     <a class="nav-link" href="#"><button class="btn btn-secondary">ABOUT US </button></a></b>
+                                <b>     <a class="nav-link" href="#"><button class="btn btn-dark">ABOUT US </button></a></b>
                                  </li>
 
             </div>
