done with the about us page

--- a/animals.html
+++ b/animals.html
@@ -37,7 +37,7 @@
                                     VET?</button></a></b>
                     </li>
                     <li class="nav-item">
-                        <b> <a class="nav-link" href="#"><button class="btn btn-dark">ABOUT US </button></a></b>
+                        <b> <a class="nav-link" href="about.html"><button class="btn btn-dark">ABOUT US </button></a></b>
                     </li>
 
             </div>
@@ -48,7 +48,7 @@
             <div class="card">
                 <img src="./img/download.jpg" class="card-img-top" alt="german shepherd">
                 <div class="card-body">
-                    <h5 class="card-title">Adopt A German Shepherd</h5>
+                    <h5 class="card-title">German Shepherd</h5>
                     <p class="card-text">German Shepard got originated from Germany. This is a new breed of dog that
                         originated in the year 1899. These are called as working dogs that are developed for herding
                         sheep. A German dog has a lot of strength, obedient, intelligent, and very well trained. It is
@@ -68,13 +68,15 @@
             <div class="card">
                 <img src="./img/british_shorthair.jpg" class="card-img-top" alt="british_shorthair">
                 <div class="card-body">
-                    <h5 class="British Shorthair">Card title</h5>
+                    <h5 class="British Shorthair">British Shorthair</h5>
                     <p class="card-text">The British Shorthair is the pedigreed version of the traditional British
                         domestic cat, with a distinctively stocky body, dense coat, and broad face. The most familiar
                         colour variant is the "British Blue", with a solid grey-blue coat, orange eyes, and a
                         medium-sized tail. The breed has also been developed in a wide range of other colours and
                         patterns, including tabby and colourpoint.</p>
-                    <button class="btn btn-dark cat">ADOPT</button>
+                   <p> WOULD YOU LIKE TO OWN ONE?
+                    <button class="btn btn-dark dog">ADOPT</button>
+                   </p>
 
                 </div>
             </div>
@@ -88,16 +90,25 @@
                         Socializing is key for this energetic rabbit, who can become depressed if it spends too much
                         time in its cage. Thanks to its easygoing attitude, children are more than welcomed to care for
                         it.</p>
+                        <p> WOULD YOU LIKE TO OWN ONE?
+                            <button class="btn btn-dark dog">ADOPT</button>
+                           </p>
+                        
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./img/guinea-pig-breeds-american-flowers-1549390080.jpg" class="card-img-top" alt="guinea pigs">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Guinea Pig Basics</h5>
+                    <p class="card-text">Originally coming from the Andes in South America, these gentle animals love
+                        spending time with their owners, exploring, and being groomed. It's recommended to adopt two or
+                        more guinea pigs at the same time because of their social nature. It's also important to find
+                        the right bedding and make sure they're getting enough vitamin C.</p>
+                        <p> WOULD YOU LIKE TO OWN ONE?
+                            <button class="btn btn-dark dog">ADOPT</button>
+                           </p>
                 </div>
             </div>
         </div>
