--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <b>     <a class="nav-link " aria-current="page" href="#"><button class="btn btn-dark vet">NEED A VET?</button></a></b>
                              </li>
                              <li class="nav-item">
-                                <b>     <a class="nav-link" href="#"><button class="btn btn-dark">ABOUT US </button></a></b>
+                                <b>     <a class="nav-link" href="about.html"><button class="btn btn-dark">ABOUT US </button></a></b>
                                  </li>
 
             </div>
