--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         </div>
     </nav>
     <h1>ABOUT MKOD ANIMAL SERVICES</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus perspiciatis illum adipisci sunt
+    <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus perspiciatis illum adipisci sunt
         molestias quod ipsum voluptate aliquid sapiente non alias ea aperiam incidunt suscipit minima, cupiditate sed
         vero nam maxime libero quibusdam placeat earum. Velit impedit quia ducimus est nam voluptates repudiandae natus
         fugiat earum dicta. Consequatur corporis labore numquam explicabo tenetur. Qui corporis ducimus officia, sunt
@@ -74,12 +74,12 @@
         numquam delectus fuga praesentium! Deleniti quo rem blanditiis dolor dolores quidem dolorem a eius explicabo
         nemo incidunt ad officiis doloremque, voluptates tempora quas quam laudantium ducimus. Cumque, impedit nobis.
     </p>
-    <p>Contact us
+    <p class="about">Contact us
         <br> info@mkodanimalservices.com
         +2348066613776,+2348185593499.
     </p>
-    <p> No 77 Yaya Abatan Road,Ogba,Lagos,Nigeria.</p>
-    <p> @ 2021 by Adroitsoft. All Rights Reserved</p>
+    <p class="about"> No 77 Yaya Abatan Road,Ogba,Lagos,Nigeria.</p>
+    <p> @ 2022 by Adroitsoft. All Rights Reserved</p>
 </body>
 
 </html>
