--- a/animals.html
+++ b/animals.html
@@ -37,7 +37,8 @@
                                     VET?</button></a></b>
                     </li>
                     <li class="nav-item">
-                        <b> <a class="nav-link" href="about.html"><button class="btn btn-dark">ABOUT US </button></a></b>
+                        <b> <a class="nav-link" href="about.html"><button class="btn btn-dark">ABOUT US
+                                </button></a></b>
                     </li>
 
             </div>
@@ -74,9 +75,9 @@
                         colour variant is the "British Blue", with a solid grey-blue coat, orange eyes, and a
                         medium-sized tail. The breed has also been developed in a wide range of other colours and
                         patterns, including tabby and colourpoint.</p>
-                   <p> WOULD YOU LIKE TO OWN ONE?
-                    <button class="btn btn-dark dog">ADOPT</button>
-                   </p>
+                    <p> WOULD YOU LIKE TO OWN ONE?
+                        <button class="btn btn-dark dog">ADOPT</button>
+                    </p>
 
                 </div>
             </div>
@@ -90,25 +91,26 @@
                         Socializing is key for this energetic rabbit, who can become depressed if it spends too much
                         time in its cage. Thanks to its easygoing attitude, children are more than welcomed to care for
                         it.</p>
-                        <p> WOULD YOU LIKE TO OWN ONE?
-                            <button class="btn btn-dark dog">ADOPT</button>
-                           </p>
-                        
+                    <p> WOULD YOU LIKE TO OWN ONE?
+                        <button class="btn btn-dark dog">ADOPT</button>
+                    </p>
+
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card">
-                <img src="./img/guinea-pig-breeds-american-flowers-1549390080.jpg" class="card-img-top" alt="guinea pigs">
+                <img src="./img/guinea-pig-breeds-american-flowers-1549390080.jpg" class="card-img-top"
+                    alt="guinea pigs">
                 <div class="card-body">
                     <h5 class="card-title">Guinea Pig Basics</h5>
                     <p class="card-text">Originally coming from the Andes in South America, these gentle animals love
                         spending time with their owners, exploring, and being groomed. It's recommended to adopt two or
                         more guinea pigs at the same time because of their social nature. It's also important to find
                         the right bedding and make sure they're getting enough vitamin C.</p>
-                        <p> WOULD YOU LIKE TO OWN ONE?
-                            <button class="btn btn-dark dog">ADOPT</button>
-                           </p>
+                    <p> WOULD YOU LIKE TO OWN ONE?
+                        <button class="btn btn-dark dog">ADOPT</button>
+                    </p>
                 </div>
             </div>
         </div>
